edtion of amount in index.html.twig which not exists anymore

--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -31,7 +31,7 @@
     </table>
 
     <p>
-        Votre solde est de: {{ amount }}
+        Votre solde est de: {{ amount }} euros (€)
     </p>
 
     <p>
